--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pkiwebsdk",
-  "version": "1.1.12",
+  "version": "1.1.13",
   "description": "PKI Web SDK",
   "scripts": {
     "pre-test": "cp ./scripts/list-stylesheets.js ./node_modules/list-stylesheets/index.js",
@@ -22,11 +22,11 @@
     "brfs": "^1.4.0",
     "browserify": "^11.0.1",
     "browserify-shim": "^3.8.10",
-    "gulp": "^3.9.0",
-    "gulp-html-to-js": "0.0.1",
-    "gulp-inline-css": "^2.0.0",
-    "gulp-minify": "0.0.5",
-    "gulp-rimraf": "^0.1.1",
+    "gulp": "^4.0.2",
+    "gulp-html-to-js": "0.0.7",
+    "gulp-inline-css": "^3.4.0",
+    "gulp-minify": "3.1.0",
+    "gulp-rimraf": "^1.0.0",
     "gulp-sync": "^0.1.4",
     "jasmine-core": "^2.3.4",
     "jsdoc": "^3.3.2",
@@ -35,7 +35,9 @@
     "karma-chrome-launcher": "^0.2.0",
     "karma-jasmine": "^0.2.2",
     "karma-mocha-reporter": "^1.1.1",
-    "node.extend": "^1.1.5"
+    "node.extend": "^1.1.5",
+    "vinyl": "^2.2.0",
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
     "asn1js": "^1.2.2",
@@ -47,8 +49,7 @@
     "pkijs": "^1.2.3",
     "rsa-pem-to-jwk": "^1.1.3",
     "simple-pem2jwk": "^0.2.4",
-    "uglipop": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "uglipop": "^1.0.0"
   },
   "browserify-shim": {
     "exports": "global:External"
